<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maliput_documentation</name>
  <version>1.0.0</version>
  <description>Maliput-repository family documentation.</description>
  <maintainer email="andrew.best@tri.global">Andrew Best</maintainer>
  <license file="LICENSE">BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_doxygen</build_depend>

  <build_depend>python3-sphinx</build_depend>
  <build_depend>python3-catkin-pkg</build_depend>

  <build_depend>delphyne</build_depend>
  <build_depend>delphyne_gui</build_depend>
  <build_depend>delphyne_demos</build_depend>
  <build_depend>maliput</build_depend>
  <build_depend>maliput_dragway</build_depend>
  <build_depend>maliput_integration</build_depend>
  <build_depend>maliput_integration_tests</build_depend>
  <build_depend>maliput_malidrive</build_depend>
  <build_depend>maliput_multilane</build_depend>
  <build_depend>maliput_object</build_depend>
  <build_depend>maliput_object_py</build_depend>
  <build_depend>maliput_py</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
